Fixing the “back to quick go old “ link alignment bug

--- a/app/styles/quickgo.scss
+++ b/app/styles/quickgo.scss
@@ -378,7 +378,7 @@ aspect-icon span.aspect-icon{
   color: #2980B9;
 }
 
-.search-align{
+.search-align, #quickgo-old{
   display: inline-block;
 }
 .search-box{
